# roxfox-bio

./: .firebaserc  .gitignore  CLAUDE.md  README.md  environment.yml  firebase.json  pyproject.toml
.claude/skills/speckit.analyze/: SKILL.md
.claude/skills/speckit.checklist/: SKILL.md
.github/workflows/: deploy.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/workflows/: workflow-registry.json
pipeline/: cache.py  cli.py  config.py  models.py
site/: index.html  robots.txt  sitemap.xml
specs/001-biotech-website/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-pipeline-research/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-vrk1-oncology-evidence/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-vrk1-indication-chem/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-validation-gates/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-ighmbp2-fragment-screen/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
tests/unit/: test_biomarker.py  test_depmap.py  test_dock.py  test_fragment_cluster.py  test_fragment_grow.py  test_fragment_library.py  test_fragment_output.py  test_fragment_pocket.py  test_fragment_screen.py  test_hitid.py  test_structalign.py  test_structalign_vrk2.py  test_validate_admet.py  test_validate_md.py  test_validate_mmgbsa.py  test_validate_selectivity.py
(+53 files in other folders)
