[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rxpipeline"
version = "0.1.0"
description = "RoxFox Bio drug discovery research pipeline"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "httpx>=0.27",
    "tenacity>=8",
    "pandas>=2",
    "jinja2>=3",
    "biopython>=1.83",
    "opencadd>=0.8",
]

[project.scripts]
pipeline = "pipeline.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["pipeline*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
